# KimiCode-GUI

./: README.md
.github/workflows/: release.yml
src-tauri/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/src/: llm.rs  main.rs  session.rs
ui/: app.js
