[package]
name = "kimi-gui"
version = "0.1.0"
description = "Kimi GUI desktop client"
authors = ["Kimi Team"]
license = "Apache-2.0"
edition = "2021"
default-run = "kimi-gui"

[build-dependencies]
tauri-build = { version = "=2.5.3", features = [] }

[dependencies]
dirs = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1.1"
tauri = { version = "=2.9.5", features = [] }
tauri-plugin-dialog = "2.0"
toml = "0.8.12"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
eventsource-stream = "0.2"
futures = "0.3"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
md-5 = "0.10"
base64 = "0.22"
hostname = "0.4"
open = "5"

[profile.release]
panic = "abort"
